--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^17.0.2",
     "tailwindcss": "^2.0.1"
   },
